Implementacion de prettier

--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    
-    <header id="main-header">
-        hola mundo
-    </header>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <header id="main-header">hola mundo</header>
 
     <button id="generate-change-button">
-        Al darme click, cambio el contenido
+      Al darme click, cambio el contenido
     </button>
-    
-
 
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
